# Bad_Compressor

./: CMakeLists.txt  Readme.md  main.cpp
Compression/Bad_Huffman/: Bad_Huffman.cpp  Bad_Huffman.h
Compression/Bad_LZSS/: Bad_LZSS.cpp  Bad_LZSS.h
Compression/Huffman/: Huffman.cpp  Huffman.h
Compression/Huffman_Universal/: Huffman_Universal.cpp  Huffman_Universal.h
Compression/LZSS/: LZSS.cpp  LZSS.h
Decompression/Decompress_Huffman/: Decompress_Huffman.cpp  Decompress_Huffman.h
Decompression/Decompress_LZSS/: Decompress.LZSS.cpp  Decompress_LZSS.h
Decompression/Decompress_Universal/: Decompress_Universal.cpp  Decompress_Universal.h
